# projects

./: .gitignore  CLAUDE.md  README.md  deployment.md  epic-engine.yml  epic-orchestrator.yml  main.tf  outputs.tf  results.txt  test.tf  variables.tf
EPIC-Pipeline/: .gitignore  CLAUDE.md  README.md  epic-engine.yml  epic-orchestrator.yml
aws-oih-fis/: DesigningForReliability_AndValidatingResults.md  LICENSE  README.md  README_NETWORK_DISRUPTION_TESTING.md  deploy-ssm-document.sh
ccoe-cfn-terraform-migration/: .gitignore  README.md  analyze.sh  assessment.sh  cfn-combined-report.csv  cfn-combined-report.xlsx  cfn-migration-complexity.csv  cfn-repo-analysis.csv  cfn-repos.txt  invoke_agent.py  normalize.py  repos.txt  search.sh
common/: download.yml
deploy/: main.yml
epic-api/: .gitignore  CLAUDE.md  (+3 more)
paige-mcp/: .env.example  .gitignore  README.md  chunker.py  config.py  crawler.py  knowledge_base.py  mcp_config.json  models.py  pyproject.toml  requirements.txt
paige-mcp-gh/: README.md  pyproject.toml  requirements.txt
paige-mcp-gh/.pipeline/: epic.json
paige-mcp-gh/terraform_kb/: __init__.py  __main__.py  crawler.py  knowledge_base.py  models.py  server.py
paige-mcp-gh/terraform_kb/server/: __main__.py  server.py
paige-mcp-gh/test/: test_mcp.py
paige-mcp/.infra/: main.tf  outputs.tf  terraform.auto.tfvars
paige-mcp/.pipeline/: epic.json
paige-mcp/src/confluence_tf_mcp/: __main__.py  cli.py  config.py  crawler.py  knowledge_base.json  knowledge_base.py  server.py
paige-mcp/terraform_kb/: __main__.py  knowledge_base.py  models.py
paige-mcp/terraform_kb/server/: __init__.py  server.py
paige-mcp/test/: results.txt  test_mcp.py
(+5889 files in other folders)
