[project]
name = "terraform-kb"
version = "0.1.0"
description = "Terraform modules knowledge base builder from Github"
requires-python = ">=3.11"
dependencies = [
	"pydantic>=2.0",
	"fastapi>=0.100",
	"uvicorn>=0.23",
	"mcp>=1.0",
]

[project.scripts]
terraform_kb = "terraform_kb.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
terraform_kb = ["*.json"]
