[project]
name = "confluence-tf-mcp"
version = "0.1.0"
description = "MCP server for crawling Confluence wiki and providing CloudFormation-to-Terraform conversion context"
requires-python = ">=3.11"
dependencies = [
	"mcp[cli]>=1.0.0",
	"httpx>=0.27.0",
	"beautifulsoup4>=4.12.0",
	"pydantic>=2.0.0",
]

[project.optional-dependencies]
aws = [
	"boto3>=1.34.0",
]
dev = [
	"pytest>=8.0",
	"pytest-asyncio>=0.24",
]

[project.scripts]
confluence-tf-mcp = "confluence_tf_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/confluence_tf_mcp"]
